Primer Lab Extra IronHack

--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -77,12 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "d606efa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "items = {\n",
+    "    \"potions\": 0,\n",
+    "    \"health\": 4,\n",
+    "    \"key\": 0,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "499552c8-9e30-46e1-a706-4ac5dc64670e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encounter_ghost():\n",
+    "def encounter_ghost(items = items):\n",
     "    \"\"\"\n",
     "    This function handles the encounter with a ghost. \n",
     "    The outcome of the battle is determined by a random number between 1 and 10.\n",
@@ -93,12 +109,20 @@
     "    \"\"\"\n",
     "    print(\"You encounter a ghost!\")\n",
     "    \n",
-    "    # your code goes here"
+    "    # your code goes here\n",
+    "    number = random.randint(1,10)\n",
+    "\n",
+    "    if number <= 5:\n",
+    "        print(\"You defeated the ghost!\")\n",
+    "        items['key'] += 1\n",
+    "    else:\n",
+    "        items['health'] -= 2\n",
+    "        print(\"You lost the battle...\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d3e4076b-48cc-41ac-95ad-891743e775f5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +154,38 @@
     "\n",
     "    \"\"\"\n",
     "     \n",
-    "    # your code goes here"
+    "    # your code goes here\n",
+    "    while True:\n",
+    "        choice = input('Write \"right\" or \"left\" for advance into the mansion or \"exit\" to excape: ')\n",
+    "\n",
+    "        if choice == 'exit':\n",
+    "            break\n",
+    "\n",
+    "        elif choice == 'right':\n",
+    "            encounter_ghost()\n",
+    "            if items['health'] == 0:\n",
+    "                print('Game over, you lost all your health points.')\n",
+    "                break\n",
+    "            if items['key'] == 1:\n",
+    "                print('You unlocked the door and found the Treasure! Congratulations!')\n",
+    "                break\n",
+    "\n",
+    "        elif choice == 'left':\n",
+    "            event = random.randint(0,1)\n",
+    "            if event == 0:\n",
+    "                print('You have win a potion!!!')\n",
+    "                items['potions'] += 1\n",
+    "            else:\n",
+    "                print('You have lossed 2 points of health, sorry.')\n",
+    "                items['health'] -= 2\n",
+    "                if items['health'] == 0:\n",
+    "                    print('Game over, you lost all your health points.')\n",
+    "                    break\n",
+    "\n",
+    "        else:\n",
+    "            print('You must write right or left. Try again.')\n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -143,10 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f238dc90-0be2-4d8c-93e9-30a1dc8a5b72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Haunted Mansion!\n",
+      "You encounter a ghost!\n",
+      "You lost the battle...\n",
+      "You encounter a ghost!\n",
+      "You lost the battle...\n",
+      "Game over, you lost all your health points.\n"
+     ]
+    }
+   ],
    "source": [
     "run_mansion()"
    ]
@@ -162,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
